flicker fix

--- a/css/style.scss
+++ b/css/style.scss
@@ -237,7 +237,7 @@ $gallery_margin:calc(#{$nav_pos}); /* set left and right margins; currently anch
 
 #gallery a.list-img-link .list-img.blur-load {
 	filter:blur(5px);
-	transition:filter 0.6s ease, opacity 0.6s ease;
+	transition:filter 0.6s ease;
 	}
 	
 #gallery a.list-img-link .list-img.blur-load.loaded {
